refactor: system-alert component updates
* Updated dom/styling to use flexbox vs table.
* Removed system-alert-icon component.
* No longer using ngx-bootstrap alert component.  It was a thin wrapper around the bootstrap alert component styling.
* Added animation when adding/remove alerts
* Alert types (color/icon) are now defined in scss maps.  These can be overridden to easily add additional alert types.

--- a/src/app/common/system-alert/system-alert.component.html
+++ b/src/app/common/system-alert/system-alert.component.html
@@ -1,22 +1,15 @@
-<alert
-	[type]="alert.type"
+<div
+	class="alert alert-{{ alert.type }} d-flex"
+	role="alert"
 	*ngFor="let alert of alertService.alerts$ | async; let i = index"
-	[dismissible]="true"
-	(close)="alertService.clear(i)"
+	@animateAddRemove
 >
-	<table aria-describedby="System alerts">
-		<tbody>
-			<tr>
-				<th class="align-middle" scope="row">
-					<system-alert-icon [icon]="alert.type"></system-alert-icon>
-				</th>
-				<td class="align-middle">
-					<div class="system-alert-message">{{ alert.msg }}</div>
-					<div class="system-alert-subtext" *ngIf="alert.subtext">
-						{{ alert.subtext }}
-					</div>
-				</td>
-			</tr>
-		</tbody>
-	</table>
-</alert>
+	<span class="fa-solid fa-fw system-alert-icon system-alert-icon-{{ alert.type }}"></span>
+	<div class="system-alert-content">
+		<div class="system-alert-message">{{ alert.msg }}</div>
+		<small *ngIf="alert.subtext">{{ alert.subtext }}</small>
+	</div>
+	<button class="close" type="button" aria-label="Close" (click)="clearAlert(i)">
+		<span aria-hidden="true">×</span>
+	</button>
+</div>
