refactor: Replace ngx-bootstrap modals with cdk dialogs
* Initial steps towards migrating away from the ngx-bootstrap library in favor of using cdk.  Cdk components have better a11y support and are style agnostic.  We can still apply bootstrap styles to them, but gives us the options to move away from bootstrap in the future.
* Still using bootstrap styling for visual consistency.
* Replaced all modal usages in starter with dialog.
* Existing ngx-bootstrap modal components/services still available to ease migrations.  Will remove in the future.

--- a/src/app/common/dialog/configurable-dialog/configurable-dialog.component.html
+++ b/src/app/common/dialog/configurable-dialog/configurable-dialog.component.html
@@ -1,14 +1,14 @@
 <asy-modal
-	[title]="title"
-	[cancelText]="cancelText"
+	[title]="data.title"
+	[cancelText]="data.cancelText"
 	[disableOk]="!modalForm.form.valid"
-	[okText]="okText"
+	[okText]="data.okText"
 	(cancel)="cancel()"
 	(ok)="ok()"
 >
-	<p *ngIf="message" [innerHTML]="message"></p>
+	<p *ngIf="data.message" [innerHTML]="data.message"></p>
 	<form id="modalForm" #modalForm="ngForm">
-		<div class="form-group" *ngFor="let input of inputs; first as isFirst">
+		<div class="form-group" *ngFor="let input of data.inputs; first as isFirst">
 			<label [class.form-required]="input.required">{{ input.label }}</label>
 
 			<textarea
