--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,9 @@
 // Import the main ngx-bootstrap style file
 @import 'styles/ngx-bootstrap';
 
+// Import the main cdk style file
+@import "styles/cdk";
+
 // Import the main ng-select style file
 @import 'styles/ng-select';
 
