refactor: Replace ngx-bootstrap dropdown w/ cdk menu and overlay
* Continues towards migrating away from the ngx-bootstrap library in favor of using cdk.  Cdk components have better a11y support and are style agnostic.  We can still apply bootstrap styles to them, but gives us the options to move away from bootstrap in the future.
* Still using bootstrap styling for visual consistency.
* Replaced all dropdown usages with menu and overlay

--- a/src/app/common/table/filter/asy-header-list-filter/asy-header-list-filter.component.html
+++ b/src/app/common/table/filter/asy-header-list-filter/asy-header-list-filter.component.html
@@ -1,26 +1,34 @@
-<span class="dropdown" container="body" dropdown [insideClick]="true">
-	<button class="dropdown-toggle dropdown-toggle-hide-caret" dropdownToggle>
-		<span
-			class="filter fa-solid fa-list"
-			container="body"
-			placement="bottom"
-			tooltip="Apply Filters"
-			[hidden]="isFiltered"
-		></span>
-		<span
-			class="filter fa-solid fa-filter"
-			container="body"
-			placement="bottom"
-			tooltip="Edit Filters"
-			[hidden]="!isFiltered"
-		></span>
-	</button>
+<button
+	class="dropdown-toggle dropdown-toggle-hide-caret"
+	cdkOverlayOrigin
+	#trigger
+	(click)="isOpen = !isOpen"
+>
+	<span
+		class="filter fa-solid fa-list"
+		container="body"
+		placement="bottom"
+		tooltip="Apply Filters"
+		[hidden]="isFiltered"
+	></span>
+	<span
+		class="filter fa-solid fa-filter"
+		container="body"
+		placement="bottom"
+		tooltip="Edit Filters"
+		[hidden]="!isFiltered"
+	></span>
+</button>
 
-	<div
-		class="dropdown-menu d-flex flex-column"
-		[ngClass]="{ 'dropdown-menu-right': dropdownMenuRight }"
-		*dropdownMenu
-	>
+<ng-template
+	cdkConnectedOverlay
+	cdkConnectedOverlayBackdropClass="cdk-overlay-transparent-backdrop"
+	[cdkConnectedOverlayHasBackdrop]="true"
+	[cdkConnectedOverlayOpen]="isOpen"
+	[cdkConnectedOverlayOrigin]="trigger"
+	(backdropClick)="isOpen = false"
+>
+	<div class="dropdown-menu d-flex flex-column" cdkTrapFocus cdkTrapFocusAutoCapture>
 		<ng-container *ngIf="showSearch">
 			<div class="search mt-2">
 				<asy-search-input
@@ -86,4 +94,4 @@
 			</div>
 		</ng-container>
 	</div>
-</span>
+</ng-template>
