--- a/src/styles/ngx-bootstrap/_variables.scss
+++ b/src/styles/ngx-bootstrap/_variables.scss
@@ -55,6 +55,7 @@ $dropdown-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3) !default;
 $dropdown-link-hover-bg: $ux-color-light-gray !default;
 $dropdown-link-active-color: $input-color !default;
 $dropdown-link-active-bg: $ux-color-light-gray !default;
+$dropdown-font-size: $input-font-size !default;
 
 $dropdown-item-padding-y: 8px !default;
 $dropdown-item-padding-x: 10px !default;
