--- a/src/app/common/table/filter/_shared.scss
+++ b/src/app/common/table/filter/_shared.scss
@@ -15,7 +15,7 @@ button.dropdown-toggle {
 
 .dropdown-menu {
 	font-size: $filter-dropdown-font-size;
-	margin-top: 0.5rem;
+	//margin-top: 0.5rem;
 	max-height: $filter-dropdown-max-height;
 
 	input {
