--- a/src/app/core/admin/cache-entries/cache-entries.component.html
+++ b/src/app/core/admin/cache-entries/cache-entries.component.html
@@ -47,47 +47,47 @@
 			</ng-container>
 			<ng-container cdkColumnDef="actionsMenu" stickyEnd>
 				<th cdk-header-cell *cdkHeaderCellDef></th>
-				<td
-					cdk-cell
-					container="body"
-					dropdown
-					placement="bottom right"
-					*cdkCellDef="let entry; let i = index"
-				>
-					<div class="dropdown border-left pl-2">
-						<button
-							class="btn btn-sm dropdown-toggle dropdown-toggle-hide-caret"
-							id="cache-entry-{{ entry._id }}-action-menu-btn"
-							type="button"
-							attr.aria-controls="cache-entry-{{ entry._id }}-action-menu"
-							dropdownToggle
-						>
-							<span class="fa-solid fa-lg fa-ellipsis-v"></span>
-						</button>
-						<ul
-							class="dropdown-menu dropdown-menu-right"
+				<td cdk-cell *cdkCellDef="let entry; let i = index">
+					<button
+						class="btn btn-sm dropdown-toggle dropdown-toggle-hide-caret border-left py-0 pl-3"
+						id="cache-entry-{{ entry._id }}-action-menu-btn"
+						type="button"
+						attr.aria-controls="cache-entry-{{ entry._id }}-action-menu"
+						[cdkMenuTriggerFor]="actionsMenu"
+					>
+						<span class="fa-solid fa-lg fa-ellipsis-v"></span>
+					</button>
+
+					<ng-template #actionsMenu>
+						<div
+							class="dropdown-menu"
 							id="cache-entry-{{ entry._id }}-action-menu"
-							role="menu"
 							attr.aria-labelledby="cache-entry-{{ entry._id }}-action-menu-btn"
-							*dropdownMenu
+							cdkMenu
 						>
-							<li role="menuitem">
-								<button class="dropdown-item" (click)="viewCacheEntry(entry)">
-									View
-								</button>
-							</li>
-							<li role="menuitem">
-								<button class="dropdown-item" (click)="refreshCacheEntry(entry)">
-									Refresh
-								</button>
-							</li>
-							<li role="menuitem">
-								<button class="dropdown-item" (click)="confirmDeleteEntry(entry)">
-									Delete
-								</button>
-							</li>
-						</ul>
-					</div>
+							<button
+								class="dropdown-item"
+								cdkMenuItem
+								(cdkMenuItemTriggered)="viewCacheEntry(entry)"
+							>
+								View
+							</button>
+							<button
+								class="dropdown-item"
+								cdkMenuItem
+								(cdkMenuItemTriggered)="refreshCacheEntry(entry)"
+							>
+								Refresh
+							</button>
+							<button
+								class="dropdown-item"
+								cdkMenuItem
+								(cdkMenuItemTriggered)="confirmDeleteEntry(entry)"
+							>
+								Delete
+							</button>
+						</div>
+					</ng-template>
 				</td>
 			</ng-container>
 			<tr cdk-header-row *cdkHeaderRowDef="displayedColumns; sticky: true"></tr>
