refactor: cdk usage cleanup
* Improve typings when using cdk dialog
* Simplify cdkConnectedOverlay usage

--- a/src/app/common/table/filter/asy-header-typeahead-filter/asy-header-typeahead-filter.component.html
+++ b/src/app/common/table/filter/asy-header-typeahead-filter/asy-header-typeahead-filter.component.html
@@ -22,11 +22,9 @@
 
 <ng-template
 	cdkConnectedOverlay
-	cdkConnectedOverlayBackdropClass="cdk-overlay-transparent-backdrop"
-	[cdkConnectedOverlayHasBackdrop]="true"
 	[cdkConnectedOverlayOpen]="isOpen"
 	[cdkConnectedOverlayOrigin]="trigger"
-	(backdropClick)="isOpen = false"
+	(overlayOutsideClick)="isOpen = false"
 >
 	<div class="dropdown-menu d-flex flex-column" cdkTrapFocus cdkTrapFocusAutoCapture>
 		<div class="my-3">
