--- a/src/app/common/table/filter/asy-header-date-filter/asy-header-date-filter.component.html
+++ b/src/app/common/table/filter/asy-header-date-filter/asy-header-date-filter.component.html
@@ -22,11 +22,9 @@
 
 <ng-template
 	cdkConnectedOverlay
-	cdkConnectedOverlayBackdropClass="cdk-overlay-transparent-backdrop"
-	[cdkConnectedOverlayHasBackdrop]="true"
 	[cdkConnectedOverlayOpen]="isOpen"
 	[cdkConnectedOverlayOrigin]="trigger"
-	(backdropClick)="isOpen = false"
+	(overlayOutsideClick)="isOpen = false"
 >
 	<div class="dropdown-menu" cdkTrapFocus cdkTrapFocusAutoCapture>
 		<div class="form-check">
