sync minor updates from downstream

--- a/src/app/core/admin/messages/list-messages/list-messages.component.html
+++ b/src/app/core/admin/messages/list-messages/list-messages.component.html
@@ -67,7 +67,7 @@
 				<th cdk-header-cell *cdkHeaderCellDef></th>
 				<td cdk-cell *cdkCellDef="let message">
 					<button
-						class="btn btn-sm dropdown-toggle dropdown-toggle-hide-caret"
+						class="btn btn-sm dropdown-toggle dropdown-toggle-hide-caret border-left py-0 pl-3"
 						id="message-{{ message._id }}-action-menu-btn"
 						type="button"
 						attr.aria-controls="message-{{ message._id }}-action-menu"
