--- a/src/app/core/site-container/site-container.component.html
+++ b/src/app/core/site-container/site-container.component.html
@@ -10,7 +10,7 @@
 <!-- Site content -->
 <section class="site-body">
 	<site-navbar>
-		<main class="site-content h-100 overflow-auto" id="app-content" tabindex="-1">
+		<main class="site-content h-100 overflow-auto" id="app-content" cdkScrollable tabindex="-1">
 			<ng-content></ng-content>
 		</main>
 	</site-navbar>
