fix: Ensure proper display of masquerade menu options

--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -157,9 +157,9 @@
 							class="dropdown-item"
 							cdkMenuItem
 							routerLink="/masquerade"
-							*ngIf="masqueradeEnabled && canMasquerade"
+							*ngIf="masqueradeEnabled && (canMasquerade || isMasquerade)"
 						>
-							<ng-container *ngIf="!isMasquerade"> Clear </ng-container>
+							<ng-container *ngIf="isMasquerade"> Clear </ng-container>
 							Masquerade
 						</button>
 					</div>
