refactor(admin): Refactor admin create/edit components
* Replace seperate create/edit components with single manage component
* Removed dependency between signup component and user admin components
* Use resolvers for loading data for edit components, with proper redirect if error loading item to edit.
* renamed some components for consistency

--- a/src/app/core/admin/admin.component.html
+++ b/src/app/core/admin/admin.component.html
@@ -1,11 +1,7 @@
 <section class="admin-container">
 	<ul class="nav nav-tabs">
 		<li class="nav-item" role="presentation" *ngFor="let topic of helpTopics">
-			<a
-				class="nav-link"
-				routerLinkActive="active"
-				[routerLink]="['/admin/' + topic.path, { clearCachedFilter: true }]"
-			>
+			<a class="nav-link" routerLinkActive="active" [routerLink]="['/admin/', topic.path]">
 				{{ topic.title }}
 			</a>
 		</li>
