fix: update remaining references to `user.userModel`

--- a/src/app/common/table/filter/asy-header-typeahead-filter/asy-header-typeahead-filter.component.html
+++ b/src/app/common/table/filter/asy-header-typeahead-filter/asy-header-typeahead-filter.component.html
@@ -30,7 +30,7 @@
 		<div class="my-3">
 			<ng-select
 				name="teamAdmin"
-				bindLabel="userModel.name"
+				bindLabel="name"
 				placeholder="Search..."
 				style="width: 200px"
 				[(ngModel)]="selectedValue"
