--- a/src/app/core/teams/add-members-modal/add-members-modal.component.html
+++ b/src/app/core/teams/add-members-modal/add-members-modal.component.html
@@ -10,7 +10,7 @@
 		<ng-select
 			name="teamAdmin"
 			appendTo="body"
-			bindLabel="userModel.name"
+			bindLabel="name"
 			cdkFocusInitial
 			placeholder="Search for user..."
 			#selectDropdown
